y.output
Terminals unused in grammar

   T_PARAMETER
   LOWEST


State 17 conflicts: 1 shift/reduce
State 39 conflicts: 1 shift/reduce
State 43 conflicts: 1 shift/reduce


Grammar

    0 $accept: input $end

    1 input: GT
    2      | A
    3      | BLANK A
    4      | BLANK GT
    5      | /* empty */

    6 GT: T
    7   | Ar
    8   | LBR '}'

    9 T: LBR A '}'

   10 Ar: LBR B '}'
   11   | LBR C '}'

   12 A: lVal '=' rVal
   13  | A lVal '=' rVal
   14  | A BLANK

   15 B: B T_IDENT
   16  | T_IDENT
   17  | B BLANK

   18 C: C T_NUM_CONSTANT
   19  | T_NUM_CONSTANT
   20  | C T_EVENT_IDENTIFIER
   21  | T_EVENT_IDENTIFIER
   22  | C BLANK

   23 lVal: T_IDENT
   24     | T_DATE
   25     | T_NUM_CONSTANT

   26 rVal: GT
   27     | T_LITERAL
   28     | T_BOOLEAN
   29     | T_EVENT_IDENTIFIER
   30     | lVal

   31 BLANK: ' '
   32      | BLANK ' '

   33 LBR: '{'
   34    | '{' BLANK


Terminals, with rules where they appear

$end (0) 0
' ' (32) 31 32
'=' (61) 12 13
'{' (123) 33 34
'}' (125) 8 9 10 11
error (256)
T_IDENT (258) 15 16 23
T_LITERAL (259) 27
T_DATE (260) 24
T_NUM_CONSTANT (261) 18 19 25
T_PARAMETER (262)
T_BOOLEAN (263) 28
T_EVENT_IDENTIFIER (264) 20 21 29
LOWEST (265)


Nonterminals, with rules where they appear

$accept (15)
    on left: 0
input (16)
    on left: 1 2 3 4 5, on right: 0
GT (17)
    on left: 6 7 8, on right: 1 4 26
T (18)
    on left: 9, on right: 6
Ar (19)
    on left: 10 11, on right: 7
A (20)
    on left: 12 13 14, on right: 2 3 9 13 14
B (21)
    on left: 15 16 17, on right: 10 15 17
C (22)
    on left: 18 19 20 21 22, on right: 11 18 20 22
lVal (23)
    on left: 23 24 25, on right: 12 13 30
rVal (24)
    on left: 26 27 28 29 30, on right: 12 13
BLANK (25)
    on left: 31 32, on right: 3 4 14 17 22 32 34
LBR (26)
    on left: 33 34, on right: 8 9 10 11


state 0

    0 $accept: . input $end

    T_IDENT         shift, and go to state 1
    T_DATE          shift, and go to state 2
    T_NUM_CONSTANT  shift, and go to state 3
    ' '             shift, and go to state 4
    '{'             shift, and go to state 5

    $default  reduce using rule 5 (input)

    input  go to state 6
    GT     go to state 7
    T      go to state 8
    Ar     go to state 9
    A      go to state 10
    lVal   go to state 11
    BLANK  go to state 12
    LBR    go to state 13


state 1

   23 lVal: T_IDENT .

    $default  reduce using rule 23 (lVal)


state 2

   24 lVal: T_DATE .

    $default  reduce using rule 24 (lVal)


state 3

   25 lVal: T_NUM_CONSTANT .

    $default  reduce using rule 25 (lVal)


state 4

   31 BLANK: ' ' .

    $default  reduce using rule 31 (BLANK)


state 5

   33 LBR: '{' .
   34    | '{' . BLANK

    ' '  shift, and go to state 4

    $default  reduce using rule 33 (LBR)

    BLANK  go to state 14


state 6

    0 $accept: input . $end

    $end  shift, and go to state 15


state 7

    1 input: GT .

    $default  reduce using rule 1 (input)


state 8

    6 GT: T .

    $default  reduce using rule 6 (GT)


state 9

    7 GT: Ar .

    $default  reduce using rule 7 (GT)


state 10

    2 input: A .
   13 A: A . lVal '=' rVal
   14  | A . BLANK

    T_IDENT         shift, and go to state 1
    T_DATE          shift, and go to state 2
    T_NUM_CONSTANT  shift, and go to state 3
    ' '             shift, and go to state 4

    $default  reduce using rule 2 (input)

    lVal   go to state 16
    BLANK  go to state 17


state 11

   12 A: lVal . '=' rVal

    '='  shift, and go to state 18


state 12

    3 input: BLANK . A
    4      | BLANK . GT
   32 BLANK: BLANK . ' '

    T_IDENT         shift, and go to state 1
    T_DATE          shift, and go to state 2
    T_NUM_CONSTANT  shift, and go to state 3
    ' '             shift, and go to state 19
    '{'             shift, and go to state 5

    GT    go to state 20
    T     go to state 8
    Ar    go to state 9
    A     go to state 21
    lVal  go to state 11
    LBR   go to state 13


state 13

    8 GT: LBR . '}'
    9 T: LBR . A '}'
   10 Ar: LBR . B '}'
   11   | LBR . C '}'

    T_IDENT             shift, and go to state 22
    T_DATE              shift, and go to state 2
    T_NUM_CONSTANT      shift, and go to state 23
    T_EVENT_IDENTIFIER  shift, and go to state 24
    '}'                 shift, and go to state 25

    A     go to state 26
    B     go to state 27
    C     go to state 28
    lVal  go to state 11


state 14

   32 BLANK: BLANK . ' '
   34 LBR: '{' BLANK .

    ' '  shift, and go to state 19

    $default  reduce using rule 34 (LBR)


state 15

    0 $accept: input $end .

    $default  accept


state 16

   13 A: A lVal . '=' rVal

    '='  shift, and go to state 29


state 17

   14 A: A BLANK .
   32 BLANK: BLANK . ' '

    ' '  shift, and go to state 19

    ' '       [reduce using rule 14 (A)]
    $default  reduce using rule 14 (A)


state 18

   12 A: lVal '=' . rVal

    T_IDENT             shift, and go to state 1
    T_LITERAL           shift, and go to state 30
    T_DATE              shift, and go to state 2
    T_NUM_CONSTANT      shift, and go to state 3
    T_BOOLEAN           shift, and go to state 31
    T_EVENT_IDENTIFIER  shift, and go to state 32
    '{'                 shift, and go to state 5

    GT    go to state 33
    T     go to state 8
    Ar    go to state 9
    lVal  go to state 34
    rVal  go to state 35
    LBR   go to state 13


state 19

   32 BLANK: BLANK ' ' .

    $default  reduce using rule 32 (BLANK)


state 20

    4 input: BLANK GT .

    $default  reduce using rule 4 (input)


state 21

    3 input: BLANK A .
   13 A: A . lVal '=' rVal
   14  | A . BLANK

    T_IDENT         shift, and go to state 1
    T_DATE          shift, and go to state 2
    T_NUM_CONSTANT  shift, and go to state 3
    ' '             shift, and go to state 4

    $default  reduce using rule 3 (input)

    lVal   go to state 16
    BLANK  go to state 17


state 22

   16 B: T_IDENT .
   23 lVal: T_IDENT .

    '='       reduce using rule 23 (lVal)
    $default  reduce using rule 16 (B)


state 23

   19 C: T_NUM_CONSTANT .
   25 lVal: T_NUM_CONSTANT .

    '='       reduce using rule 25 (lVal)
    $default  reduce using rule 19 (C)


state 24

   21 C: T_EVENT_IDENTIFIER .

    $default  reduce using rule 21 (C)


state 25

    8 GT: LBR '}' .

    $default  reduce using rule 8 (GT)


state 26

    9 T: LBR A . '}'
   13 A: A . lVal '=' rVal
   14  | A . BLANK

    T_IDENT         shift, and go to state 1
    T_DATE          shift, and go to state 2
    T_NUM_CONSTANT  shift, and go to state 3
    ' '             shift, and go to state 4
    '}'             shift, and go to state 36

    lVal   go to state 16
    BLANK  go to state 17


state 27

   10 Ar: LBR B . '}'
   15 B: B . T_IDENT
   17  | B . BLANK

    T_IDENT  shift, and go to state 37
    ' '      shift, and go to state 4
    '}'      shift, and go to state 38

    BLANK  go to state 39


state 28

   11 Ar: LBR C . '}'
   18 C: C . T_NUM_CONSTANT
   20  | C . T_EVENT_IDENTIFIER
   22  | C . BLANK

    T_NUM_CONSTANT      shift, and go to state 40
    T_EVENT_IDENTIFIER  shift, and go to state 41
    ' '                 shift, and go to state 4
    '}'                 shift, and go to state 42

    BLANK  go to state 43


state 29

   13 A: A lVal '=' . rVal

    T_IDENT             shift, and go to state 1
    T_LITERAL           shift, and go to state 30
    T_DATE              shift, and go to state 2
    T_NUM_CONSTANT      shift, and go to state 3
    T_BOOLEAN           shift, and go to state 31
    T_EVENT_IDENTIFIER  shift, and go to state 32
    '{'                 shift, and go to state 5

    GT    go to state 33
    T     go to state 8
    Ar    go to state 9
    lVal  go to state 34
    rVal  go to state 44
    LBR   go to state 13


state 30

   27 rVal: T_LITERAL .

    $default  reduce using rule 27 (rVal)


state 31

   28 rVal: T_BOOLEAN .

    $default  reduce using rule 28 (rVal)


state 32

   29 rVal: T_EVENT_IDENTIFIER .

    $default  reduce using rule 29 (rVal)


state 33

   26 rVal: GT .

    $default  reduce using rule 26 (rVal)


state 34

   30 rVal: lVal .

    $default  reduce using rule 30 (rVal)


state 35

   12 A: lVal '=' rVal .

    $default  reduce using rule 12 (A)


state 36

    9 T: LBR A '}' .

    $default  reduce using rule 9 (T)


state 37

   15 B: B T_IDENT .

    $default  reduce using rule 15 (B)


state 38

   10 Ar: LBR B '}' .

    $default  reduce using rule 10 (Ar)


state 39

   17 B: B BLANK .
   32 BLANK: BLANK . ' '

    ' '  shift, and go to state 19

    ' '       [reduce using rule 17 (B)]
    $default  reduce using rule 17 (B)


state 40

   18 C: C T_NUM_CONSTANT .

    $default  reduce using rule 18 (C)


state 41

   20 C: C T_EVENT_IDENTIFIER .

    $default  reduce using rule 20 (C)


state 42

   11 Ar: LBR C '}' .

    $default  reduce using rule 11 (Ar)


state 43

   22 C: C BLANK .
   32 BLANK: BLANK . ' '

    ' '  shift, and go to state 19

    ' '       [reduce using rule 22 (C)]
    $default  reduce using rule 22 (C)


state 44

   13 A: A lVal '=' rVal .

    $default  reduce using rule 13 (A)
